--- a/public/style.css
+++ b/public/style.css
@@ -40,7 +40,7 @@ ul {
 }
 
 #result {
-  margin-top: 300px;
+  margin-top: 100px;
 }
 
 
@@ -70,6 +70,16 @@ ul {
 }
 
 #scissors {
+  background-size: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  display: block;
+  height: 14em;
+  margin: auto;
+  width: 16em;
+}
+
+#winning_choice {
   background-size: 100%;
   background-position: center;
   background-repeat: no-repeat;
